tests/snapshots/cli__encrypted__a_locked_encrypted_vault_errors_naming_unlock.snap
---
source: tests/cli.rs
info:
  program: ntropy
  args:
    - search
    - "-n"
    - "-p"
  env:
    EDITOR: "true"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: while listing notes: this vault is locked; run `ntropy unlock`
