tests/snapshots/cli__encrypted__an_encrypted_vault_is_searchable_afterwards.snap
---
source: tests/cli.rs
info:
  program: ntropy
  args:
    - "-n"
    - "--passphrase-file"
    - test-passphrase.txt
    - search
    - "-p"
  env:
    EDITOR: "true"
---
success: true
exit_code: 0
----- stdout -----
[VAULT]/all-notes/[ULID....................].age

----- stderr -----
