tests/snapshots/cli__encrypted__an_interrupted_conversion_blocks_the_next_command-2.snap
---
source: tests/cli.rs
info:
  program: ntropy
  args:
    - "-n"
    - "--passphrase-file"
    - test-passphrase.txt
    - search
    - "-p"
  env:
    EDITOR: "true"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: this vault has an interrupted `encrypt`; finish it with `ntropy vault encrypt --resume`
