tests/snapshots/cli__encrypted__info_on_a_locked_vault_reports_without_asking_for_a_key.snap
---
source: tests/cli.rs
info:
  program: ntropy
  args:
    - "-n"
    - info
  env:
    EDITOR: "true"
---
success: true
exit_code: 0
----- stdout -----
Active vault:  [VAULT] (via current directory)
Default vault: [DEFAULT]
Encryption:    on (locked)

Notes:     (locked; run `ntropy unlock` for note statistics)
Views:     0
Templates: 1

Templates:
  default

----- stderr -----
