tests/snapshots/cli__encrypted__init_encrypted_reports_the_new_vault.snap
---
source: tests/cli.rs
info:
  program: ntropy
  args:
    - "-n"
    - init
    - "--encrypted"
    - "--passphrase-file"
    - pw.txt
  env:
    EDITOR: "true"
---
success: true
exit_code: 0
----- stdout -----
Initialized vault at [VAULT]
Encryption:    on
Recipient:     [RECIPIENT]

----- stderr -----
