tests/snapshots/cli__encrypted__init_encrypted_without_a_passphrase_source_errors.snap
---
source: tests/cli.rs
info:
  program: ntropy
  args:
    - "-n"
    - init
    - "--encrypted"
  env:
    EDITOR: "true"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: no passphrase available: pass `--passphrase-file <PATH>` or run without `-n` so one can be typed
