tests/snapshots/cli__encrypted__lock_on_a_plaintext_vault_errors.snap
---
source: tests/cli.rs
info:
  program: ntropy
  args:
    - "-n"
    - lock
  env:
    EDITOR: "true"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: this vault is not encrypted
