tests/snapshots/cli__encrypted__new_in_an_encrypted_vault_writes_an_age_file.snap
---
source: tests/cli.rs
info:
  program: ntropy
  args:
    - "-n"
    - new
    - "-p"
    - Quarterly Review
  env:
    EDITOR: "true"
    NTROPY_IDENTITY: test-identity.txt
---
success: true
exit_code: 0
----- stdout -----
[VAULT]/all-notes/[ULID....................].age

----- stderr -----
